kubernetes/apps/k8s/cilium/gateways.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-eg
  namespace: cilium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: "86.207.62.12"
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-echo
      hostname: "k8s.prrlvr.fr"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: echo-k8s-tls
    - protocol: HTTPS
      port: 443
      name: https
      hostname: "*.prrlvr.fr"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-prrlvr-tls
    - protocol: HTTPS
      port: 443
      name: https-k8s
      hostname: "*.k8s.prrlvr.fr"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-prrlvr-tls
    - protocol: TLS
      port: 443
      name: vault-tls-passthrough
      hostname: "vault.k8s.prrlvr.fr"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
